GNOME Bugzilla – Bug 797211
msdk: Fix building on MSVC
Last modified: 2018-10-01 22:38:12 UTC
And add missing #ifdef _WIN32 for MSVC build
Created attachment 373781 [details] [review] msdk: Fix meson build gst-plugins-bad\sys\msdk\meson.build:57:4: ERROR: File msdk-enum.c does not exist.
Created attachment 373782 [details] [review] msdk: Fix building on MSVC
Thanks for the patches! Attachment 373781 [details] pushed as 44ecf53 - msdk: Fix meson build Attachment 373782 [details] pushed as f106a10 - msdk: Fix building on MSVC
f106a10 also cherry-picked as db25ec317 to the 1.14 branch.