sys/msdk/gstmsdkvpp.c
@@ -513,6 +513,7 @@ get_surface_from_pool (GstMsdkVPP * thiz, GstBufferPool * pool,
   return msdk_surface;
 }
 
+#ifndef _WIN32
 static gboolean
 import_dmabuf_to_msdk_surface (GstMsdkVPP * thiz, GstBuffer * buf,
     MsdkSurface * msdk_surface)
@@ -576,6 +577,7 @@ import_dmabuf_to_msdk_surface (GstMsdkVPP * thiz, GstBuffer * buf,
 
   return TRUE;
 }
+#endif
 
 static MsdkSurface *
 get_msdk_surface_from_input_buffer (GstMsdkVPP * thiz, GstBuffer * inbuf)
